--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "tsc",
+    "prestart": "npx tsc",
     "start": "node ."
   },
   "repository": {
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
-    "@types/yup": "^0.29.11"
+    "@types/yup": "^0.29.11",
+    "typescript": "^4.3.3"
   }
 }
