--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
     "typeorm": "^0.2.34",
     "yup": "^0.32.9"
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
+    "@types/nodemailer": "^6.4.2",
     "@types/yup": "^0.29.11",
     "typescript": "^4.3.3"
   }
